--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,25 @@
     "name": "NMonkey Image Replacer",
     "version": "1.0",
     "description": "Replaces all images on the page with images of monkeys",
-    "permissions": ["scripting", "activeTab"],
+    "permissions": ["activeTab"],
     "host_permissions": ["<all_urls>"],
+    "background": {
+      "service_worker": "background.js"
+    },
     "content_scripts": [
-        {
-            "matches": ["<all_urls>"],
-            "js": ["scrip.js"]
-        }
+      {
+        "matches": ["<all_urls>"],
+        "js": ["content.js"]
+      }
     ],
-    "icons": {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
-    }
+    "web_accessible_resources": [
+      {
+        "resources": [
+          "images/*.png",
+          "images/*.jpg"
+        ],
+        "matches": ["<all_urls>"]
+      }
+    ]
   }
+  
