--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,31 @@
 {
-    "manifest_version": 3,
-    "name": "NMonkey Image Replacer",
-    "version": "1.0",
-    "description": "Replaces all images on the page with images of monkeys",
-    "permissions": ["activeTab"],
-    "host_permissions": ["<all_urls>"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"]
-      }
-    ],
-    "web_accessible_resources": [
-      {
-        "resources": [
-          "images/*.png",
-          "images/*.jpg"
-        ],
-        "matches": ["<all_urls>"]
-      }
-    ]
+  "manifest_version": 3,
+  "name": "NMonkey Image Replacer",
+  "version": "1.0",
+  "description": "Replaces all images on the page with images of monkeys",
+  "permissions": ["activeTab"],
+  "host_permissions": ["<all_urls>"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "imagens/icons/*.png",
+        "imagens/img/*.jpg"
+      ],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "icons": {
+    "16": "imagens/icons/pmonkey.png",
+    "48": "imagens/icons/pmonkey.png",
+    "128": "imagens/icons/pmonkey.png"
   }
-  
+}
